--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "immutable": "^3.7.5",
-    "react": "^0.13.3"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
