--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "immutable": "^3.7.5",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react": "^0.14.1",
+    "react-addons-pure-render-mixin": "^0.14.1",
+    "react-dom": "^0.14.1",
+    "react-router": "^1.0.0-rc3"
   }
 }
